          - deprecate shadownaemon
          - renamed cli livecache cmd to lmd
          - Broadcasts:
            - add template checkbox
          - Panorama:
            - optionally show broadcasts in panorama dashboards
            - make determing worst state for group/filter icons configurable
            - add new configuration option 'default_state_order'
            - fix tab rotation
          - Config Tool:
            - make command line a textarea
            - use separate edit sessions for each user
            - fix adding custom variables from extra_custom_var
          - Business Process:
            - calculate results parallel if there are many bps
            - add details link to each node
            - add max_check_attempts to bp nodes

2.20-2   Wed Mar 14 00:12:24 CET 2018
          - add optional debug switch for admin users
          - Config Tool:
            - fix error when saving from raw edit

2.20     Wed Mar  7 10:59:57 CET 2018
          - add support for ipv6 livestatus backends (#753)
          - add timeout for cookie authentication http sub request
          - add filter to notifications and history page
          - add filter to processinfo page
          - add new 'problems_limit' config option
          - support tls livestatus connections
          - fix occasional wrong redirects on page reloads (#776)
          - support unlimited backend section depth
          - Business Process:
            - fix save button in chrome (#786)
            - fix displaying configured eventhandler
          - LMD:
            - only restart lmd on timeouts when neccessary
            - support lmd federation mode
            - support lmd tls livestatus connections
          - Mobile:
            - implement remote filtering
            - add alerts and notifications button to extinfo page
          - Logcache:
            - speed up updates
          - Panorama:
            - save open tabs in cookies instead of the user profile