@@ -166,6 +166,33 @@ Ext.define('TP.SmallWidget', {
             }
             This.setIconLabel();
         },
+        beforeshow: function( This, eOpts ) {
+            delete This.hideLabel;
+            // check view permissions
+            if(!This.xdata.groups) { return; }
+            if(!This.locked)       { return; }
+            var groupsHash = {};
+            for(var x = 0; x < contactgroups.length; x++) {
+                var g = contactgroups[x];
+                groupsHash[g] = true;
+            }
+            // last hit wins
+            var perm = "show";
+            for(var x = 0; x < This.xdata.groups.length; x++) {
+                var group = This.xdata.groups[x];
+                var g = Ext.Object.getKeys(group)[0];
+                if(g == "*" || groupsHash[g]) {
+                    perm = group[g];
+                }
+            }
+            if(perm == "show") {
+                return(true);
+            }
+            // make sure label is hidden as well
+            if(This.labelEl) { This.labelEl.hide(); }
+            This.hideLabel = true;
+            return(false);
+        },
         show: function( This, eOpts ) {
             This.addDDListener(This);
             /* update label */
