@@ -895,6 +895,107 @@ TP.iconShowEditDialog = function(panel) {
         };
     }
 
+    /* permissions Tab */
+    var access = [];
+    if(panel.xdata.groups == undefined) { panel.xdata.groups = []; }
+    Ext.Array.each(panel.xdata.groups, function(item, idx, len) {
+        var group = Ext.Object.getKeys(item)[0];
+        var perm  = item[group];
+        access.push({ contactgroup: group, permission: perm });
+    });
+    var permissionsStore = Ext.create('Ext.data.Store', {
+        fields: ['contactgroup', 'permission'],
+        data: access
+    });
+    var permissionsItems = [{
+        /* permissions */
+        xtype:      'fieldcontainer',
+        fieldLabel: 'Permissions',
+        layout:     'fit',
+        items: [{
+            xtype:      'gridpanel',
+            name:       'permissions',
+            id:         'permissionsGrid',
+            columns:    [
+                    { header: 'Group', flex: 1, dataIndex: 'contactgroup',  align: 'left', tdCls: 'editable', editor: {
+                            xtype:            'searchCbo',
+                            panel:             panel,
+                            store:             searchStore,
+                            storeExtraParams: { wildcards: 1 },
+                            lazyRender:        true,
+                            allowBlank:        false
+                        }
+                    },
+                    { header: 'Permissions', width: 140,  dataIndex: 'permission', align: 'left', tdCls: 'editable', editor: {
+                            xtype:         'combobox',
+                            triggerAction: 'all',
+                            selectOnTab:    true,
+                            lazyRender:     true,
+                            editable:       false,
+                            store:        ['show', 'hide']
+                        }
+                    },
+                    { header: '',  width: 30,
+                      xtype: 'actioncolumn',
+                      items: [{
+                            icon: '../plugins/panorama/images/delete.png',
+                            handler: TP.removeGridRow,
+                            action: 'remove'
+                      }],
+                      tdCls: 'clickable icon_column'
+                    }
+            ],
+            store: permissionsStore,
+            selType:    'rowmodel',
+            viewConfig: {
+                plugins: {
+                    ptype: 'gridviewdragdrop',
+                    dragText: 'Drag and drop to reorganize'
+                }
+            },
+            plugins:     [Ext.create('Ext.grid.plugin.RowEditing', {
+                clicksToEdit: 1,
+                listeners: {
+                    canceledit: function(grid, eOpts) {
+                        // remove new elements
+                        if(eOpts.record.phantom) { eOpts.store.remove(eOpts.record); }
+                    }
+                }
+            })],
+            height: 250,
+            width:  300,
+            fbar: [{
+                type: 'button',
+                text: 'Add Contactgroup',
+                iconCls: 'user-tab',
+                handler: function(btn, eOpts) {
+                    var store = btn.up('gridpanel').store;
+                    store.add({contactgroup:'*', permission:'hide'})
+                    btn.up('gridpanel').plugins[0].startEdit(store.last(), 0);
+                }
+            }]
+        }]
+    }];
+    var permissionsTab = {
+        title : 'Permissions',
+        type  : 'panel',
+        items: [{
+            xtype : 'panel',
+            layout: 'fit',
+            border: 0,
+            items: [{
+                    xtype:          'form',
+                    id:             'permissionForm',
+                    bodyPadding:     2,
+                    border:          0,
+                    bodyStyle:      'overflow-y: auto;',
+                    submitEmptyText: false,
+                    defaults:      { anchor: '-12', labelWidth: 130 },
+                    items:           permissionsItems
+            }]
+        }]
+    };
+
     /* Source Tab */
     var sourceTab = {
         title: 'Source',
@@ -969,6 +1070,7 @@ TP.iconShowEditDialog = function(panel) {
             linkTab,
             labelTab,
             popupTab,
+            permissionsTab,
             sourceTab
         ]
     });
@@ -982,7 +1084,7 @@ TP.iconShowEditDialog = function(panel) {
 
     var settingsWindow = new Ext.Window({
         height:  350,
-        width:   470,
+        width:   540,
         layout: 'fit',
         hidden:  true,
         items:   tabPanel,
@@ -1076,6 +1178,7 @@ TP.iconShowEditDialog = function(panel) {
         }
     }).show();
     Ext.getBody().unmask();
+    settingsWindow.permissionsStore = permissionsStore;
 
     TP.setIconSettingsValues(panel.xdata);
     TP.iconSettingsWindow = settingsWindow;
@@ -1163,6 +1266,14 @@ TP.get_icon_form_xdata = function(settingsWindow) {
         label:      Ext.getCmp('labelForm').getForm().getValues(),
         popup:      Ext.getCmp('popupForm') && Ext.getCmp('popupForm').getForm().getValues()
     }
+    xdata.groups = [];
+    TP.iconSettingsWindow.permissionsStore.each(function(rec) {
+        var row = {};
+        row[rec.data.contactgroup] = rec.data.permission;
+        xdata.groups.push(row);
+    });
+    if(xdata.groups.length == 0) { delete xdata.groups }
+
     // clean up
     if(xdata.label.labeltext == '')   { delete xdata.label; }
     if(xdata.link.link == '')         { delete xdata.link;  }
